2004-10-16  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/cgimain.c: Separated CGI features.

2004-10-15  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c: Some functions return FALSE instead of aborting if
	an error occurs.

	* src/lang.c: Removed end directive.

	* src/misc.c, src/misc.h, src/cmdline.c, src/cmdline.h: Removed.

	* src/escm.c (escm_error): Moved from misc.c.

	* src/filter.c: Removed CGI features.

2004-10-13  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_preproc): Rewrote the parser.

	* src/escm.c, src/filter.c (escm_bind_query_string): Always bind
	the query string to *escm-query-string*.

2004-10-12  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_bind_query_string): Escape backslashes.

2004-10-11  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/misc.c, src/misc.h, src/filter.c (cgi_html_header): Replaced
	with escm_header.

	* src/escm.c, src/escm.h (escm_header): Write out an HTML header.

	* src/misc.c (cgi_error): Fixed bugs on the content header.

	* src/misc.c, src/misc.h, src/filter.c (cgi_text_header): Removed.

	* src/escm.c, src/misc.h, src/misc.c: Remove lineno variables.

2004-10-07  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/lang.c: Added end directive to suppress useless newlines.

2004-02-29  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Skip the sharp-bang line of the first file.

2004-02-23  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_preproc): Most lines were counted twice.

2004-02-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/langconf.c: Replaced lang.awk with a C program.

	* src/lang.awk: Removed.

	* src/cmdline.h: Was part of misc.h.

	* src/fork.h: Was part of misc.h.

	* src/filter.c (main): Fixed a bug on meta-arguments.

	* src/cmdline.c (parse_shebang): Added this function to replace it
	with functions in meta_argc.c.

	* src/Makefile.am: Removed meta_argc.[ch].

	* src/meta_arg.c: Removed.

	* src/meta_arg.h: Removed.

2004-02-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
