@@ -8,7 +8,7 @@ SUBDIRS = lang
 BUILT_SOURCES = deflang.c
 CLEANFILES = deflang.c langconf$(EXEEXT)
 
-noinst_PROGRAMS = langconf aescm.cgi
+noinst_PROGRAMS = langconf
 langconf_SOURCES = langconf.c escm.c escm.h lang.c
 
 deflang.c : langconf$(EXEEXT) $(srcdir)/lang/@DEFAULT_LANG@ 
@@ -26,6 +26,7 @@ DEFS = -DESCM_LANG_DIR=\"$(pkgdatadir)/lang/\" -DESCM_PATH=\"$(bindir)/$(PACKAGE
 
 
 # CGI
+EXTRA_PROGRAMS = aescm.cgi
 aescm_cgi_SOURCES = cgimain.c escm.c escm.h $(BUILT_SOURCES)
 
 # end of src/Makefile.am
