@@ -157,10 +157,6 @@ parse_lang(const char *name)
   if (ptr == NULL || mylang.name == NULL || data == NULL)
     return NULL;
 
-  if (strcmp(mylang.name, "scm") == 0 || strcmp(mylang.name, "lisp") == 0)
-    mylang.id_type = ESCM_ID_LISP;
-  else
-    mylang.id_type = ESCM_ID_LOWER;
   mylang.backend = data;
   mylang.nil = "\"\"";
 
@@ -173,17 +169,6 @@ parse_lang(const char *name)
       break;
     case HASH_KEY('a', 's'): /* assign */
       if (!parse_form3(data, &(mylang.assign))) return NULL;
-      break;
-    case HASH_KEY('i', 'd'): /* identifier */
-      if (*data == '*') {
-	mylang.id_type = ESCM_ID_LISP;
-      } else if (*data == 'T') {
-	mylang.id_type = ESCM_ID_TITLE;
-      } else if (*data == 'U') {
-	mylang.id_type = ESCM_ID_UPPER;
-      } else {
-	mylang.id_type = ESCM_ID_LOWER;
-      }
       break;
     case HASH_KEY('i', 'n'): /* init */
       mylang.init = data;
