@@ -3,8 +3,6 @@ lisp -quiet -batch -eval '(setf *prompt* "")'
 ;; init
 (let (*escm-version* *escm-input-file* *escm-output-file*
 *escm-interpreter* *escm-query-string*)
-;; identifier
-*lisp*
 ;; nil
 nil
 ;; assign
