@@ -1,7 +1,5 @@
 ;; scm - configurations for the Scheme language
 gosh -b
-;; identifier
-*lisp*
 ;; nil
 #f
 ;; bind
